# vlc

modules/: whisper_shared.c
modules/audio_filter/: Makefile.am  livetranslate_whisper_audio.c  whisper_shared.h  whisper_shared_vlc.h
modules/demux/json/: libvlc_json_la-lexicon.c
modules/spu/: Makefile.am  ctranslate2_example.h  ctranslate2_wrapper.cpp  ctranslate2_wrapper.h  livetranslate.c  livetranslate_whisper.c  livetranslate_whisper_simple.c  meson.build  translate_cli_wrapper.c
